fixed faq overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,7 +574,7 @@ h5 {
 /* FAQ GRID */
 .faq-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;
 }
 
